--- a/index.html
+++ b/index.html
@@ -184,6 +184,12 @@
       // Event objects contain only non-translatable fields here; text lives in I18N.eventsById
       events: [
         {
+          id: 'week34-2025',
+          location: 'Múzeumkert (Múzeum körút, Bródy Sándor utca közelében)',
+          map: 'https://maps.google.com/?q=Magyar%20Nemzeti%20M%C3%BAzeum%2C%20M%C3%BAzeum%20k%C3%B6r%C3%BAt%2C%20Budapest',
+          rsvp: ''
+        },
+        {
           id: 'launchday',
           location: 'Múzeumkert (Múzeum körút, Bródy Sándor utca közelében)',
           map: 'https://maps.google.com/?q=Magyar%20Nemzeti%20M%C3%BAzeum%2C%20M%C3%BAzeum%20k%C3%B6r%C3%BAt%2C%20Budapest',
@@ -249,6 +255,11 @@
         gallery:{ alt0:'Napos parkbeli találkozó', alt1:'Barátok nevetnek játék közben', alt2:'Kötetlen, versenyes hangulat' },
         // Per-event translations by id
         eventsById: {
+          week34-2025: {
+            title: 'Pénteki Játéknap',
+            date: 'Augusztus 22., péntek, 16:00',
+            blurb: 'Nyílt alkalom minden szintnek. A szabályokat 5 perc alatt elmagyarázzuk. Ingyenes és barátságos!'
+          },
           launchday: {
             title: 'Indító Játéknap',
             date: 'Augusztus 8., péntek, 16:00',
@@ -311,6 +322,11 @@
         footer:{about:'About', events:'Events', join:'Join'},
         gallery:{ alt0:'Sunny meetup in a park', alt1:'Friends laughing while playing', alt2:'Casual, welcoming vibe' },
         eventsById: {
+          week34-2025: {
+            title: 'Friday Play (week 34)',
+            date: 'Friday, 22 August, 16:00',
+            blurb: 'Open session for all levels. We teach the rules in 5 minutes. Free and friendly!'
+          },
           launchday: {
             title: 'Launch Day',
             date: 'Friday, 8 August, 16:00',
@@ -373,6 +389,11 @@
         footer:{about:'Om oss', events:'Träffar', join:'Gå med'},
         gallery:{ alt0:'Solig träff i parken', alt1:'Vänner skrattar medan de spelar', alt2:'Avslappnad, välkomnande stämning' },
         eventsById: {
+          week34-2025: {
+            title: 'Speldag (vecka 34)',
+            date: 'Fredag 22 augusti kl. 16:00',
+            blurb: 'Öppen träff för alla nivåer. Reglerna förklaras på 5 minuter. Gratis och välkomnande!'
+          },
           launchday: {
             title: 'Lanseringsdag',
             date: 'Fredag 8 augusti kl. 16:00',
