Update RSVP link for week342025 event

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           id: 'week342025',
           location: 'Múzeumkert (Múzeum körút, Bródy Sándor utca közelében)',
           map: 'https://maps.google.com/?q=Magyar%20Nemzeti%20M%C3%BAzeum%2C%20M%C3%BAzeum%20k%C3%B6r%C3%BAt%2C%20Budapest',
-          rsvp: ''
+          rsvp: 'https://www.facebook.com/events/776696845382851/'
         },
         {
           id: 'launchday',
