--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <h1 class="text-4xl md:text-5xl font-extrabold leading-tight" data-t="hero.title">Szeretünk kubbozni.</h1>
           <p class="mt-4 text-lg text-slate-600" data-t="hero.blurb">A Budapest Kubb Klub egy kötetlen, ingyenes kubb közösség Budapesten. Rendszeresen találkozunk parkokban (Múzeumkert, Margitsziget, Bikás park). Várunk haladókat és kezdőket — a szabályokat 5 perc alatt elmagyarázzuk.</p>
           <div class="mt-6 flex flex-wrap gap-3">
-            <a href="#events" class="px-5 py-3 rounded-2xl card bg-slate-900 text-white font-semibold hover:opacity-90" data-t="hero.ctaEvents">Közelgő események</a>
+            <a href="#events" class="px-5 py-3 rounded-2xl card bg-slate-900 text-white font-semibold hover:opacity-90" data-t="hero.ctaEvents">Események</a>
             <a href="#rules" class="px-5 py-3 rounded-2xl card bg-white border font-semibold hover:bg-slate-50" data-t="hero.ctaRules">Mi az a kubb?</a>
           </div>
         </div>
@@ -122,7 +122,7 @@
     <!-- Gallery -->
     <section id="gallery" class="max-w-6xl mx-auto px-4 py-12">
       <h2 class="text-3xl font-bold" data-t="photos.heading">Képek</h2>
-      <p class="mt-3 text-slate-700" data-t="photos.intro">Hangulatképek — hamarosan.</p>
+      <p class="mt-3 text-slate-700" data-t="photos.intro">Hangulatképek</p>
       <div class="mt-6 grid md:grid-cols-3 gap-6" id="gallery-wrap"></div>
     </section>
 
@@ -161,9 +161,9 @@
       assets: {
         heroImg: '/images/kubbklub_logo.png',
         gallery: [
-          'https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/Kubb_game_setup.svg/1920px-Kubb_game_setup.svg.png',
           '/images/background.png',
-          '/images/1000008697.jpg'
+          '/images/1000008697.jpg',
+          'https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/Kubb_game_setup.svg/1920px-Kubb_game_setup.svg.png'
         ]
       },
       ruleLinks: [
@@ -235,8 +235,8 @@
           rulesSimple: 'Egyszerűsített szabályok',
           rulesWC: 'Kubb VB – Szabályok'
         },
-        videos: { heading: 'Nézd meg röviden', intro: 'Két angol nyelvű videó, egy a szabályokról, egy a vb döntőről.' },
-        events: { heading: 'Közelgő események' },
+        videos: { heading: 'Nézd meg!', intro: 'Két angol nyelvű videó, egy a szabályokról, egy a vb döntőről.' },
+        events: { heading: 'Események' },
         photos: { heading: 'Képek', intro: 'Hangulatképek' },
         join: {
           heading: 'Csatlakozz a Budapest Kubb Klubhoz',
@@ -252,7 +252,6 @@
           ]
         },
         footer:{about:'Rólunk', events:'Események', join:'Csatlakozz'},
-        gallery:{ alt0:'Napos parkbeli találkozó', alt1:'Barátok nevetnek játék közben', alt2:'Kötetlen, versenyes hangulat' },
         // Per-event translations by id
         eventsById: {
           week342025: {
@@ -274,7 +273,7 @@
         hero: {
           title: 'We love playing kubb.',
           blurb: 'Budapest Kubb Club is a casual, free kubb community in Budapest. We meet regularly in parks (Múzeumkert, Margaret Island, Bikás park). Everyone welcome — we teach the rules in 5 minutes.',
-          ctaEvents: 'Upcoming events',
+          ctaEvents: 'Events',
           ctaRules: 'What is kubb?'
         },
         about: {
@@ -304,7 +303,7 @@
           rulesWC: 'World Championship rules'
         },
         videos: { heading: 'Watch quickly', intro: 'Two videos: one on rules, one on a world cup final.' },
-        events: { heading: 'Upcoming events' },
+        events: { heading: 'Events' },
         photos: { heading: 'Photos', intro: 'Vibes — coming soon.' },
         join: {
           heading: 'Join Budapest Kubb Club',
@@ -320,7 +319,6 @@
           ]
         },
         footer:{about:'About', events:'Events', join:'Join'},
-        gallery:{ alt0:'Sunny meetup in a park', alt1:'Friends laughing while playing', alt2:'Casual, welcoming vibe' },
         eventsById: {
           week342025: {
             title: 'Friday Play (week 34)',
@@ -341,7 +339,7 @@
         hero: {
           title: 'Vi älskar kubb.',
           blurb: 'Budapest Kubbklubb är en avslappnad, gratis kubbgemenskap i Budapest. Vi träffas regelbundet i parker (Múzeumkert, Margitsziget, Bikás park). Alla är välkomna — vi lär ut reglerna på 5 minuter.',
-          ctaEvents: 'Kommande träffar',
+          ctaEvents: 'Träffar',
           ctaRules: 'Vad är kubb?'
         },
         about: {
@@ -371,7 +369,7 @@
           rulesWC: 'VM-regler'
         },
         videos: { heading: 'Titta kort', intro: 'Två videor: en om reglerna, en från VM-finalen.' },
-        events: { heading: 'Kommande träffar' },
+        events: { heading: 'Träffar' },
         photos: { heading: 'Bilder', intro: 'Stämningsbilder' },
         join: {
           heading: 'Gå med i Budapest Kubbklubb',
@@ -387,7 +385,6 @@
           ]
         },
         footer:{about:'Om oss', events:'Träffar', join:'Gå med'},
-        gallery:{ alt0:'Solig träff i parken', alt1:'Vänner skrattar medan de spelar', alt2:'Avslappnad, välkomnande stämning' },
         eventsById: {
           week342025: {
             title: 'Speldag (vecka 34)',
