--- a/index.html
+++ b/index.html
@@ -254,6 +254,11 @@
         footer:{about:'Rólunk', events:'Események', join:'Csatlakozz'},
         // Per-event translations by id
         eventsById: {
+          week362025: {
+            title: 'Pénteki Játéknap',
+            date: 'Szeptember 5., péntek, 16:00',
+            blurb: 'Nyílt alkalom minden szintnek. A szabályokat 5 perc alatt elmagyarázzuk. Ingyenes és barátságos!'
+          },
           week342025: {
             title: 'Pénteki Játéknap',
             date: 'Augusztus 22., péntek, 16:00',
@@ -320,6 +325,11 @@
         },
         footer:{about:'About', events:'Events', join:'Join'},
         eventsById: {
+          week362025: {
+            title: 'Friday Play (week 36)',
+            date: 'Friday, 5 September, 16:00',
+            blurb: 'Nyílt alkalom minden szintnek. A szabályokat 5 perc alatt elmagyarázzuk. Ingyenes és barátságos!'
+          },
           week342025: {
             title: 'Friday Play (week 34)',
             date: 'Friday, 22 August, 16:00',
@@ -386,6 +396,11 @@
         },
         footer:{about:'Om oss', events:'Träffar', join:'Gå med'},
         eventsById: {
+         week362025: {
+            title: 'Speldag (vecka 36)',
+            date: 'Fredag 5 september kl. 16:00',
+            blurb: 'Öppen träff för alla nivåer. Reglerna förklaras på 5 minuter. Gratis och välkomnande!'
+          },
           week342025: {
             title: 'Speldag (vecka 34)',
             date: 'Fredag 22 augusti kl. 16:00',
