--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     <section id="events" class="bg-white border-y">
       <div class="max-w-6xl mx-auto px-4 py-12">
         <div class="flex items-end justify-between gap-4 flex-wrap">
-          <h2 class="text-3xl font-bold" data-t="events.heading">Közelgő események</h2>
+          <h2 class="text-3xl font-bold" data-t="events.heading">Események</h2>
         </div>
         <div class="mt-6 grid md:grid-cols-3 gap-6" id="events-container"></div>
       </div>
@@ -183,6 +183,12 @@
       },
       // Event objects contain only non-translatable fields here; text lives in I18N.eventsById
       events: [
+        {
+          id: 'week362025',
+          location: 'Múzeumkert (Múzeum körút, Bródy Sándor utca közelében)',
+          map: 'https://maps.google.com/?q=Magyar%20Nemzeti%20M%C3%BAzeum%2C%20M%C3%BAzeum%20k%C3%B6r%C3%BAt%2C%20Budapest',
+          rsvp: 'https://www.facebook.com/events/1339133074597050/'
+        },
         {
           id: 'week342025',
           location: 'Múzeumkert (Múzeum körút, Bródy Sándor utca közelében)',
