--- a/index.html
+++ b/index.html
@@ -184,6 +184,12 @@
       // Event objects contain only non-translatable fields here; text lives in I18N.eventsById
       events: [
         {
+          id: 'week382025',
+          location: 'Múzeumkert (Múzeum körút, Bródy Sándor utca közelében)',
+          map: 'https://maps.google.com/?q=Magyar%20Nemzeti%20M%C3%BAzeum%2C%20M%C3%BAzeum%20k%C3%B6r%C3%BAt%2C%20Budapest',
+          rsvp: 'https://www.facebook.com/events/1858246748381884/'
+        },        
+        {
           id: 'week362025',
           location: 'Múzeumkert (Múzeum körút, Bródy Sándor utca közelében)',
           map: 'https://maps.google.com/?q=Magyar%20Nemzeti%20M%C3%BAzeum%2C%20M%C3%BAzeum%20k%C3%B6r%C3%BAt%2C%20Budapest',
@@ -260,6 +266,11 @@
         footer:{about:'Rólunk', events:'Események', join:'Csatlakozz'},
         // Per-event translations by id
         eventsById: {
+          week382025: {
+            title: 'Pénteki Játéknap',
+            date: 'Szeptember 19., péntek, 16:15',
+            blurb: 'Nyílt alkalom minden szintnek. A szabályokat 5 perc alatt elmagyarázzuk. Ingyenes és barátságos!'
+          },          
           week362025: {
             title: 'Pénteki Játéknap',
             date: 'Szeptember 5., péntek, 16:00',
@@ -331,6 +342,11 @@
         },
         footer:{about:'About', events:'Events', join:'Join'},
         eventsById: {
+          week382025: {
+            title: 'Friday Play (week 38)',
+            date: 'Friday, 19 September, 16:15',
+            blurb: 'Nyílt alkalom minden szintnek. A szabályokat 5 perc alatt elmagyarázzuk. Ingyenes és barátságos!'
+          },
           week362025: {
             title: 'Friday Play (week 36)',
             date: 'Friday, 5 September, 16:00',
@@ -402,6 +418,11 @@
         },
         footer:{about:'Om oss', events:'Träffar', join:'Gå med'},
         eventsById: {
+         week382025: {
+            title: 'Speldag (vecka 38)',
+            date: 'Fredag 19 september kl. 16:15',
+            blurb: 'Öppen träff för alla nivåer. Reglerna förklaras på 5 minuter. Gratis och välkomnande!'
+          },
          week362025: {
             title: 'Speldag (vecka 36)',
             date: 'Fredag 5 september kl. 16:00',
