--- a/index.html
+++ b/index.html
@@ -184,6 +184,12 @@
       // Event objects contain only non-translatable fields here; text lives in I18N.eventsById
       events: [
         {
+          id: 'week392025',
+          location: 'ELTE Lágymányosi Campus (az északi és déli épületek között)',
+          map: 'https://www.google.com/maps/@47.4736017,19.0629781,296m/data=!3m1!1e3?entry=ttu&g_ep=EgoyMDI1MDkxNC4wIKXMDSoASAFQAw%3D%3D',
+          rsvp: 'https://www.facebook.com/events/2533979763627251'
+        },
+        {
           id: 'week382025',
           location: 'Múzeumkert (Múzeum körút, Bródy Sándor utca közelében)',
           map: 'https://maps.google.com/?q=Magyar%20Nemzeti%20M%C3%BAzeum%2C%20M%C3%BAzeum%20k%C3%B6r%C3%BAt%2C%20Budapest',
@@ -194,18 +200,6 @@
           location: 'Múzeumkert (Múzeum körút, Bródy Sándor utca közelében)',
           map: 'https://maps.google.com/?q=Magyar%20Nemzeti%20M%C3%BAzeum%2C%20M%C3%BAzeum%20k%C3%B6r%C3%BAt%2C%20Budapest',
           rsvp: 'https://www.facebook.com/events/1339133074597050/'
-        },
-        {
-          id: 'week342025',
-          location: 'Múzeumkert (Múzeum körút, Bródy Sándor utca közelében)',
-          map: 'https://maps.google.com/?q=Magyar%20Nemzeti%20M%C3%BAzeum%2C%20M%C3%BAzeum%20k%C3%B6r%C3%BAt%2C%20Budapest',
-          rsvp: 'https://www.facebook.com/events/776696845382851/'
-        },
-        {
-          id: 'launchday',
-          location: 'Múzeumkert (Múzeum körút, Bródy Sándor utca közelében)',
-          map: 'https://maps.google.com/?q=Magyar%20Nemzeti%20M%C3%BAzeum%2C%20M%C3%BAzeum%20k%C3%B6r%C3%BAt%2C%20Budapest',
-          rsvp: ''
         }
       ]
     };
@@ -266,6 +260,11 @@
         footer:{about:'Rólunk', events:'Események', join:'Csatlakozz'},
         // Per-event translations by id
         eventsById: {
+          week392025: {
+            title: 'Hétfői Játéknap',
+            date: 'Szeptember 22., hétfő, 16:30',
+            blurb: 'Nyílt alkalom minden szintnek. A szabályokat 5 perc alatt elmagyarázzuk. Ingyenes és barátságos!'
+          },
           week382025: {
             title: 'Pénteki Játéknap',
             date: 'Szeptember 19., péntek, 16:15',
@@ -342,15 +341,20 @@
         },
         footer:{about:'About', events:'Events', join:'Join'},
         eventsById: {
+          week392025: {
+            title: 'Monday Play (week 39)',
+            date: 'Friday, 22 September, 16:30',
+            blurb: 'Open session for all levels. We teach the rules in 5 minutes. Free and friendly!'
+          },
           week382025: {
             title: 'Friday Play (week 38)',
             date: 'Friday, 19 September, 16:15',
-            blurb: 'Nyílt alkalom minden szintnek. A szabályokat 5 perc alatt elmagyarázzuk. Ingyenes és barátságos!'
+            blurb: 'Open session for all levels. We teach the rules in 5 minutes. Free and friendly!'
           },
           week362025: {
             title: 'Friday Play (week 36)',
             date: 'Friday, 5 September, 16:00',
-            blurb: 'Nyílt alkalom minden szintnek. A szabályokat 5 perc alatt elmagyarázzuk. Ingyenes és barátságos!'
+            blurb: 'Open session for all levels. We teach the rules in 5 minutes. Free and friendly!'
           },
           week342025: {
             title: 'Friday Play (week 34)',
@@ -418,6 +422,11 @@
         },
         footer:{about:'Om oss', events:'Träffar', join:'Gå med'},
         eventsById: {
+         week392025: {
+            title: 'Speldag (vecka 39)',
+            date: 'Måndag 22 september kl. 16:30',
+            blurb: 'Öppen träff för alla nivåer. Reglerna förklaras på 5 minuter. Gratis och välkomnande!'
+         },
          week382025: {
             title: 'Speldag (vecka 38)',
             date: 'Fredag 19 september kl. 16:15',
