--- a/index.html
+++ b/index.html
@@ -184,6 +184,12 @@
       // Event objects contain only non-translatable fields here; text lives in I18N.eventsById
       events: [
         {
+          id: 'week422025',
+          location: 'Múzeumkert (Múzeum körút, Bródy Sándor utca közelében)',
+          map: 'https://maps.google.com/?q=Magyar%20Nemzeti%20M%C3%BAzeum%2C%20M%C3%BAzeum%20k%C3%B6r%C3%BAt%2C%20Budapest',
+          rsvp: 'https://www.facebook.com/events/1339133074597050/'
+        },
+        {
           id: 'week392025',
           location: 'ELTE Lágymányosi Campus (az északi és déli épületek között)',
           map: 'https://www.google.com/maps/@47.4736017,19.0629781,296m/data=!3m1!1e3?entry=ttu&g_ep=EgoyMDI1MDkxNC4wIKXMDSoASAFQAw%3D%3D',
@@ -194,12 +200,6 @@
           location: 'Múzeumkert (Múzeum körút, Bródy Sándor utca közelében)',
           map: 'https://maps.google.com/?q=Magyar%20Nemzeti%20M%C3%BAzeum%2C%20M%C3%BAzeum%20k%C3%B6r%C3%BAt%2C%20Budapest',
           rsvp: 'https://www.facebook.com/events/1858246748381884/'
-        },        
-        {
-          id: 'week362025',
-          location: 'Múzeumkert (Múzeum körút, Bródy Sándor utca közelében)',
-          map: 'https://maps.google.com/?q=Magyar%20Nemzeti%20M%C3%BAzeum%2C%20M%C3%BAzeum%20k%C3%B6r%C3%BAt%2C%20Budapest',
-          rsvp: 'https://www.facebook.com/events/1339133074597050/'
         }
       ]
     };
@@ -260,6 +260,11 @@
         footer:{about:'Rólunk', events:'Események', join:'Csatlakozz'},
         // Per-event translations by id
         eventsById: {
+          week422025: {
+            title: 'Csütörtöki Játéknap',
+            date: 'Október 16., csütörtök, 16:30',
+            blurb: 'Nyílt alkalom minden szintnek. A szabályokat 5 perc alatt elmagyarázzuk. Ingyenes és barátságos!'
+          },
           week392025: {
             title: 'Hétfői Játéknap',
             date: 'Szeptember 22., hétfő, 16:30',
@@ -341,6 +346,11 @@
         },
         footer:{about:'About', events:'Events', join:'Join'},
         eventsById: {
+          week422025: {
+            title: 'Thursday Play (week 42)',
+            date: 'Thursday, 16 October, 16:30',
+            blurb: 'Open session for all levels. We teach the rules in 5 minutes. Free and friendly!'
+          },
           week392025: {
             title: 'Monday Play (week 39)',
             date: 'Friday, 22 September, 16:30',
@@ -422,6 +432,11 @@
         },
         footer:{about:'Om oss', events:'Träffar', join:'Gå med'},
         eventsById: {
+         week422025: {
+            title: 'Speldag (vecka 42)',
+            date: 'torsdag 16 oktober kl. 16:30',
+            blurb: 'Öppen träff för alla nivåer. Reglerna förklaras på 5 minuter. Gratis och välkomnande!'
+         },
          week392025: {
             title: 'Speldag (vecka 39)',
             date: 'Måndag 22 september kl. 16:30',
